--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  home works!
-</p>
+<div class="wrapper">
+    <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+  <div class="content-center">
+  <div class="container">
+      <div class="title-brand">
+
+      </div>
+  </div>
+  </div>
+</div>
+</div>
