--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,36 @@
-<div class="wrapper">
-    <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
-  <div class="content-center">
+<!-- <div class="wrapper"> -->
+    <!-- <div id="page-header"> -->
+        <!-- <img src=""> -->
+  <!-- <div class="content-center">
   <div class="container">
-      <div class="title-brand">
+  </div>
+  </div> -->
+<!-- </div> -->
+<!-- </div> -->
 
-      </div>
+
+<!-- <div class="wrapper">
+  <div class="container-fluid" id="page-header" style="background-image: url('/assets/img/bag.jpg')">
+    <div class="overlay">
+    <div class="content-center">
+      <h1>Some Up </h1>
+    </div>
+    </div>
   </div>
+</div> -->
+
+<div class="wrapper">
+  <div id="page-header" style="background-image: url('/assets/img/bag.jpg')">
+    <div class="overlay">
+      <div class="container">
+          <div class="content-center">
+            <h1>SomeUp </h1>
+            <h3>Take Pleasure of Amazing Taste</h3>
+          </div>
+    </div>
+    </div>
   </div>
-</div>
+  <div class="container-fluid">
+    
+  </div>
 </div>
