--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,29 @@
-/* .page-header {
-    background-image: url('assets/img/bg.jpg');
-} */
+#page-header {
+    /* background-color: #B2AFAB; */
+    background-position: center center;
+    background-size: cover;
+    min-height:85vh;
+    max-height: 999px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    z-index: -10;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    min-height: 100vh;
+    max-height: 509px;
+    z-index: -5;
+    background-color: rgb(255,255,255,0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+/* slider */
