--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
-/* 
+
+
 // Make default navbar links display block at choosen breakpoint and adjust styles to fit...
 @media (max-width: 62em) {
 	.navbar-nav {
@@ -22,4 +23,4 @@
 		position: relative;
 		float: none;
 	}
-} */
+}
